--- a/src/imu_encoder_odom_generator/CMakeLists.txt
+++ b/src/imu_encoder_odom_generator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(imu_encoder_odom)
+project(imu_encoder_odom_generator)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
